<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.therisingtechie.geello.SimpleRegistrationActivity"
    tools:showIn="@layout/activity_simple_registration">

    <android.support.constraint.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"
        tools:layout_editor_absoluteX="180dp"
        tools:layout_editor_absoluteY="0dp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/edtLastNameWrapper"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:theme="@style/edtRegistrationStyle"
        app:layout_constraintLeft_toLeftOf="@+id/guideline9"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.0">

        <EditText
            android:id="@+id/edtLastName"
            android:layout_width="match_parent"
            android:inputType="textCapSentences"
            android:layout_height="wrap_content"
            android:hint="@string/edt_lastname_placeholder" />
    </android.support.design.widget.TextInputLayout>


    <!-- <android.support.design.widget.TextInputLayout
         android:layout_width="0dp"
         android:theme="@style/edtRegistrationStyle"
         android:layout_height="wrap_content"
         android:layout_marginLeft="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toLeftOf="@+id/guideline11"
         android:layout_marginRight="8dp"
         android:id="@+id/edtMobileWrapper"
         app:layout_goneMarginLeft="8dp"


         android:layout_marginEnd="8dp"
         tools:layout_editor_absoluteY="122dp"
         app:layout_constraintHorizontal_bias="1.0">-->


    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_weight="1"
        android:text="MOBILE"
        android:textAppearance="@android:style/TextAppearance.Small"

        android:textColor="@color/colorPrimary"
        app:layout_constraintTop_toBottomOf="@+id/edtEmailWrapper"
        android:layout_marginLeft="9dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0" />

    <!--</android.support.design.widget.TextInputLayout>
-->
    <EditText
        android:id="@+id/edtMobileee"
        android:layout_width="0dp"
        android:gravity="center"
        android:cursorVisible="false"
        android:focusable="false"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/icon_india"
        android:hint="+91"
        android:theme="@style/edtRegistrationStyle"
        app:layout_goneMarginLeft="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="0dp"
        app:layout_constraintRight_toLeftOf="@+id/guideline11"
        android:layout_marginRight="8dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />




    <EditText
        android:id="@+id/edtMobile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginLeft="8dp"
        android:layout_marginTop="0dp"
        android:drawableRight="@drawable/icon_india"

        android:drawableTint="#FFFFFF"
        android:hint="9723613143"
        android:inputType="numberSigned"


        android:maxLength="10"
        android:theme="@style/edtRegistrationStyle"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/guideline11"


        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/edtPasswordWrapper"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:theme="@style/edtRegistrationStyle"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:passwordToggleEnabled="true"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/tvMobileError">

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:inputType="textPassword"
            android:layout_height="wrap_content"
            android:hint="@string/edt_password_placeholder" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/textView"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/tv_registration_terms"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtPasswordWrapper" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_clicked_background_primary_color"
        android:text="@string/btn_register"
        android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/edtEmailWrapper"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:theme="@style/edtRegistrationStyle"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtFirstNameWrapper">

        <EditText
            android:id="@+id/edtEmail"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:focusableInTouchMode="false"
            android:layout_height="wrap_content"
            android:hint="@string/edt_email_placeholder" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/edtFirstNameWrapper"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"

        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:theme="@style/edtRegistrationStyle"
        app:layout_constraintRight_toLeftOf="@+id/guideline9"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="8dp"

        app:layout_constraintLeft_toLeftOf="parent">
        <!--android:theme="@style/edtRegistrationStyle"-->
        <EditText
            android:id="@+id/edtFirstName"
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:inputType="textCapSentences"
            android:hint="@string/edt_firstname_placeholder" />
        <requestFocus/>
    </android.support.design.widget.TextInputLayout>

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline15"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.039138943" />

    <TextView
        android:id="@+id/tvMobileError"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="12dp"

        android:textColor="#BD2B2A"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/guideline11"
        app:layout_constraintHorizontal_bias="0.42"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/edtMobile" />

</android.support.constraint.ConstraintLayout>
